# byebyemenu

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile  release.sh  style.css
.github/workflows/: ci.yml
docs/src/: byebyemenu.1.md
examples/css/: gruvbox-dark.css
src/: actions.rs  config.rs  main.rs  ui.rs
